<resources>
    <string name="app_name">Guru</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="authenticator_label">Guru</string>
    <string name="authenticator_accountType">guru.windroilla.com</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_courses">Search Courses</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_help">Help/Feedback</string>
    <string name="title_logout">Logout</string>

    <string name="profile_picture">Profile Picture</string>
    <string name="display_camera_button">Use Camera</string>
    <string name="message_crop_picture">Move / resize to crop the picture</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_sign_up">SignUp</string>

    <string name="profile_first_name">first name</string>
    <string name="profile_last_name">last name</string>
    <string name="profile_mobile_number">mobile number</string>
    <string name="profile_email">email</string>
    <string name="profile_ambition">ambition</string>
    <string name="profile_father_name">father name</string>
    <string name="profile_address">address</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="profile_user_from">user from</string>

    <string name="courses_type">Type</string>
    <string name="courses_institute">Institute</string>
    <string name="courses_fee">Fee</string>
    <string name="courses_validity">Validity</string>
    <string name="courses_registrations">Registrations till date</string>
    <string name="courses_manager">Course Manager</string>
    <string name="courses_discuss">Discuss</string>
    <string name="courses_strategy">Strategy</string>
    <string name="courses_join">Join</string>

    <string name="title_activity_profile_picture_display">Profile Picture</string>
    <string name="title_activity_image_crop">ImageCropActivity</string>
</resources>
