<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.windroilla.guru.SignUp">

    <ScrollView
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signup_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/profile_first_name"
                android:textAppearance="?android:textAppearanceLarge" />

            <EditText
                android:id="@+id/signup_form_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/profile_first_name"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/signup_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/profile_last_name"
                android:textAppearance="?android:textAppearanceLarge" />

            <EditText
                android:id="@+id/signup_form_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/profile_last_name"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/signup_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/profile_email"
                android:textAppearance="?android:textAppearanceLarge" />

            <AutoCompleteTextView
                android:id="@+id/signup_form_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/signup_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/profile_mobile_number"
                android:textAppearance="?android:textAppearanceLarge" />

            <EditText
                android:id="@+id/signup_form_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/profile_mobile_number"
                android:inputType="phone" />

            <TextView
                android:id="@+id/signup_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/password"
                android:textAppearance="?android:textAppearanceLarge" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/signup_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/confirm_password"
                android:textAppearance="?android:textAppearanceLarge" />

            <EditText
                android:id="@+id/signup_form_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/signup_ambition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/profile_ambition"
                android:textAppearance="?android:textAppearanceLarge" />

            <EditText
                android:id="@+id/signup_form_ambition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/profile_ambition"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/signup_father_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/profile_father_name"
                android:textAppearance="?android:textAppearanceLarge" />

            <EditText
                android:id="@+id/signup_form_father_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/profile_father_name"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:id="@+id/signup_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/profile_address"
                android:textAppearance="?android:textAppearanceLarge" />

            <EditText
                android:id="@+id/signup_form_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:hint="@string/profile_address"
                android:maxLines="5"
                android:singleLine="false" />


            <Button
                android:id="@+id/signup_form_submit"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/title_activity_sign_up"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
