<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:orientation="vertical"
    android:paddingLeft="8dip"
    android:paddingRight="8dip">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/recycler_item_course_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardElevation="4dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/guru_dark_blue"
                android:orientation="vertical"
                android:padding="12dip">

                <TextView
                    android:id="@+id/recycler_item_course_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dip">

                <RatingBar
                    android:id="@+id/recycler_item_course_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:isIndicator="true"
                    android:numStars="5" />

                <TextView
                    android:id="@+id/recycler_item_course_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/recycler_item_course_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/recycler_item_course_instructor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/recycler_item_course_institute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/recycler_item_course_strength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/recycler_item_course_validity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textAppearance="?android:textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_top_border"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recycler_item_course_discuss"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_textview"
                    android:gravity="center_horizontal"
                    android:padding="12dip"
                    android:text="@string/courses_discuss" />

                <TextView
                    android:id="@+id/recycler_item_course_strategy"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_textview"
                    android:gravity="center_horizontal"
                    android:padding="12dip"
                    android:text="@string/courses_strategy" />

                <TextView
                    android:id="@+id/recycler_item_course_join"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_last_textview"
                    android:gravity="center_horizontal"
                    android:padding="12dip"
                    android:text="@string/courses_join" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>